add functionality for publishing a feed

--- a/templates/newactivity.phtml
+++ b/templates/newactivity.phtml
@@ -1,4 +1,5 @@
 <h2>New Activity</h2>
+<?= 'updated feed: <a href="' . $this->feedUri . '">' . $this->feedUri . '</a>' ?>
 <pre>
 <?php
     echo var_export($this->activity, true);
