add aair namespace to atom feed

--- a/templates/feed.phtml
+++ b/templates/feed.phtml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<feed xmlns="http://www.w3.org/2005/Atom">
+<feed xmlns="http://www.w3.org/2005/Atom" xmlns:activity="http://activitystrea.ms/schema/1.0/">
     <title>Activity Feed for <?= $this->name ?></title>
     <id><?= $this->uri ?></id>
     <link rel="hub" href="<?= $this->hub ?>"/>
