--- a/templates/layout.phtml
+++ b/templates/layout.phtml
@@ -24,7 +24,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </a>
-                <a class="brand" href="#">Xodx</a>
+                <a class="brand" href="#"><img src="resources/img/xodx_20.png" alt="Xodx" /></a>
                 <div class="btn-group pull-right">
             <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
               <i class="icon-user"></i> Username
