add updated and self to feed

--- a/templates/feed.phtml
+++ b/templates/feed.phtml
@@ -3,6 +3,8 @@
     <title>Activity Feed for <?= $this->name ?></title>
     <id><?= $this->uri ?></id>
     <link rel="hub" href="<?= $this->hub ?>"/>
+    <link rel="self" href="<?= $this->feedUri ?>"/>
+    <updated><?= $this->updated ?></updated>
 
     <?php foreach ($this->activities as $activity) : ?>
 
