--- a/templates/feed.phtml
+++ b/templates/feed.phtml
@@ -3,7 +3,7 @@
     <title>Activity Feed for <?= $this->name ?></title>
     <id><?= $this->uri ?></id>
     <link rel="hub" href="<?= $this->hub ?>"/>
-    <link rel="self" href="<?= $this->feedUri ?>"/>
+    <link rel="self" type="application/atom+xml" href="<?= $this->feedUri ?>"/>
     <updated><?= $this->updated ?></updated>
 
     <?php foreach ($this->activities as $activity) : ?>
