--- a/templates/layout.phtml
+++ b/templates/layout.phtml
@@ -14,6 +14,7 @@
     </style>
     <script type="text/javascript" src="resources/jquery/jquery.js"></script>
     <script type="text/javascript" src="resources/bootstrap/js/bootstrap.js"></script>
+    <script type="text/javascript" src="resources/bootstrap/js/bootstrap-tab.js"></script>
 </head>
 <body>
     <div class="navbar navbar-fixed-top">
