--- a/templates/newuser.phtml
+++ b/templates/newuser.phtml
@@ -1,5 +1,5 @@
 <h2>Add Person</h2>
-<form action="?c=signup&a=newuser" method="post">
+<form action="?c=application&a=newuser" method="post">
 <div class="input-append">
 <input type="text" name="person" /><button class="btn btn-primary" type="submit">Subscribe</button>
 </div>
