--- a/templates/layout.phtml
+++ b/templates/layout.phtml
@@ -28,11 +28,11 @@
                 <a class="brand" href="#"><img src="resources/img/xodx_20.png" alt="Xodx" /></a>
                 <div class="btn-group pull-right">
             <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-              <i class="icon-user"></i> Username
+              <i class="icon-user"></i><?= $this->username ?>
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
-              <li><a href="#">Profile</a></li>
+              <li><a href="?c=application&amp;a=login">Login</a></li>
               <li class="divider"></li>
               <li><a href="#">Sign Out</a></li>
             </ul>
