--- a/templates/feed.phtml
+++ b/templates/feed.phtml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom" xmlns:activity="http://activitystrea.ms/schema/1.0/">
     <title>Activity Feed for <?= $this->name ?></title>
-    <id><?= $this->uri ?></id>
-    <link rel="hub" href="<?= $this->hub ?>"/>
-    <link rel="self" type="application/atom+xml" href="<?= $this->feedUri ?>"/>
+    <id><?= htmlentities($this->uri) ?></id>
+    <link rel="hub" href="<?= htmlentities($this->hub) ?>"/>
+    <link rel="self" type="application/atom+xml" href="<?= htmlentities($this->feedUri) ?>"/>
     <updated><?= $this->updated ?></updated>
 
     <?php foreach ($this->activities as $activity) : ?>
 
     <entry>
       <title><?= $activity['title'] ?></title>
-      <id><?= $activity['uri'] ?></id>
-      <link href="<?= $activity['uri'] ?>" />
+      <id><?= htmlentities($activity['uri']) ?></id>
+      <link href="<?= htmlentities($activity['uri']) ?>" />
       <published><?= $activity['pubDate'] ?></published>
       <updated><?= $activity['pubDate'] ?></updated>
       <author>
         <name><?= $activity['author'] ?></name>
-        <uri><?= $activity['authorUri'] ?></uri>
+        <uri><?= htmlentities($activity['authorUri']) ?></uri>
       </author>
       <activity:verb><?= $activity['verb'] ?></activity:verb>
       <activity:object>
