--- a/templates/profilelist.phtml
+++ b/templates/profilelist.phtml
@@ -3,7 +3,7 @@
 <?php
 if (!empty($this->profilelistList)) :
     foreach($this->profilelistList as $entry) :?>
-<li>Profile of <a href="?c=profile&amp;a=show&amp;person=<?= urlencode($entry['person']) ?>"><?php echo $entry['name']; ?></a></li>
+<li>Profile of <a href="<?= $entry['person'] ?>"><?php echo $entry['name']; ?></a></li>
 <?php
     endforeach;
 endif;
