--- a/templates/profileshow.phtml
+++ b/templates/profileshow.phtml
@@ -4,7 +4,7 @@
     <h3><?= $this->profileshowName ?></h3>
     <?php if(isset($this->profileshowNick)) : ?> <h4><?= $this->profileshowNick ?></h4> <?php endif; ?>
     <h5>knows ...</h5>
-    <form method="post" action="?c=profile&a=addfriend">
+    <form method="post" action="?c=profile&amp;a=addfriend">
     <ul>
 <?php
 foreach($this->profileshowKnows as $contact) :
@@ -18,7 +18,7 @@ if ($contact['name'] != null) {
 <?php endforeach; ?>
         <li>
             <div class="input-append">
-                <input type="hidden" name="person" value="<?= $this->profileshowPersonUri ?>" />
+                <input type="hidden" name="person" value="<?= htmlentities($this->profileshowPersonUri) ?>" />
                 <input type="text" name="friend" /><button class="btn btn-primary" type="submit">Add</button>
             </div>
         </li>
@@ -35,21 +35,24 @@ if ($contact['name'] != null) {
     <?php foreach ($this->profileshowActivities as $activity) : ?>
     <div class="activity">
       <p>
-        <a href="<?= $activity['uri'] ?>"><strong><?= $activity['title'] ?></strong></a><br />
-        <em><?= $activity['pubDate'] ?></em>
+        <!-- <a href="<?= $activity['uri'] ?>"><strong><?= $activity['title'] ?></strong></a><br /> -->
       </p>
       <p>
-        <a href="<?= $activity['authorUri'] ?>"><?= $activity['authorUri'] ?></a>
-        did <a href="<?= $activity['verb'] ?>"><?= $activity['verb'] ?></a>
+      <form method="post" action="?c=activity&amp;a=replyForm">
+        <a href="<?= htmlentities($activity['authorUri']) ?>">
+            <?= htmlentities($activity['author']) ?>
+        </a>
+        <a href="<?= htmlentities($activity['verb']) ?>"><?= Tools::getSpokenWord($activity['verb']) ?></a>
+
         <?php if (isset($activity['objectType'])) : ?>
-
-        an <a href="<?= $activity['objectType'] ?>"><?= $activity['objectType'] ?></a>
+        a <a href="<?= htmlentities($activity['object']) ?>">
+            <?= Tools::getSpokenWord($activity['type']) ?>
+        </a> at <?= $activity['pubDate'] ?>
         <?php endif; ?>
-        : <a href="<?= $activity['object'] ?>"><?= $activity['object'] ?></a>
-        <?php if (isset($activity['objectContent'])) : ?>
-
-        <?= $activity['objectContent'] ?>
-        <?php endif; ?>
+                <input type="hidden" name="object" value="<?= htmlentities($activity['object'])?>" />
+                <input type="hidden" name="actor" value="<?= htmlentities($this->profileshowPersonUri) ?>" />
+                <button class="btn btn-mini" type="submit">Reply</button>
+            </form>
     </div>
     <?php endforeach; ?>
     <?php else: ?>
@@ -58,58 +61,50 @@ if ($contact['name'] != null) {
         </div>
     <?php endif; ?>
     <h2>Add Activity ...</h2>
-    <form method="post" action="?c=activity&a=addactivity">
-        <table>
-            <tr>
-                <th>Actor</th>
-                <td>
-                    <?= $this->profileshowName ?>
-
+        <th>Actor</th>
+            <?= $this->profileshowName ?>
+            <input type="hidden" name="actor" value="<?= $this->profileshowPersonUri ?>" />
+        <ul class="nav nav-pills">
+            <li class="active"><a href="#status" data-toggle="tab">Status</a></li>
+            <li><a href="#link" data-toggle="tab">Link</a></li>
+            <li><a href="#photo" data-toggle="tab">Photo</a></li>
+        </ul>
+        <div class="tab-content">
+            <div class="tab-pane active" id="status">
+                <form method="post" action="?c=activity&amp;a=addactivity">
+                    <textarea name="content"></textarea>
+                    <input type="hidden" name="verb" value="Post"  >
+                    <input type="hidden" name="type" value="Note" />
                     <input type="hidden" name="actor" value="<?= $this->profileshowPersonUri ?>" />
-                </td>
-            </tr>
-            <tr>
-                <th>Verb</th>
-                <td>
-                    <select name="verb">
-                        <option value="http://xmlns.notu.be/aair#Located" disabled="true">Located</option>
-                        <option value="http://xmlns.notu.be/aair#Join" disabled="true">Join</option>
-                        <option value="http://xmlns.notu.be/aair#MakeFriend" disabled="true">MakeFriend</option>
-                        <option value="http://xmlns.notu.be/aair#MarkAsFavorite" disabled="true">MarkAsFavorite</option>
-                        <option value="http://xmlns.notu.be/aair#Play" disabled="true">Play</option>
-                        <option value="http://xmlns.notu.be/aair#Post" selected="true">Post</option>
-                        <option value="http://xmlns.notu.be/aair#RSVP" disabled="true">RSVP</option>
-                        <option value="http://xmlns.notu.be/aair#Save" disabled="true">Save</option>
-                        <option value="http://xmlns.notu.be/aair#Share" disabled="true">Share</option>
-                        <option value="http://xmlns.notu.be/aair#StartFollowing" disabled="true">StartFollowing</option>
-                        <option value="http://xmlns.notu.be/aair#Tag" disabled="true">Tag</option>
-                    </select>
-                </td>
-            </tr>
-            <tr>
-                <th>Object</th>
-                <td>
-                <table>
-                    <tr>
-                        <th>Type</th>
-                        <td>
-                            <select name="type">
-                                <option value="http://xmlns.notu.be/aair#Note">Note</option>
-                            </select>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>content</th>
-                        <td><textarea name="content"></textarea></td>
-                    </tr>
-                </table>
-                </td>
-            </tr>
-        </table>
-        <button class="btn btn-primary" type="submit">Do</button>
-    </form>
+                    <input type="hidden" name="reply" value=false />
+                    <button class="btn btn-primary" type="submit">Post</button>
+                </form>
+            </div>
+            <div class="tab-pane" id="link">
+                <form method="post" action="?c=activity&amp;a=addactivity">
+                    <input type="text" name="content" />
+                    <textarea name="about"></textarea>
+                    <input type="hidden" name="verb" value="Post" />
+                    <input type="hidden" name="type" value="Bookmark" />
+                    <input type="hidden" name="actor" value="<?= $this->profileshowPersonUri ?>" />
+                    <input type="hidden" name="reply" value="false" />
+                    <button class="btn btn-primary" type="submit">Share</button>
+                </form>
+            </div>
+            <div class="tab-pane" id="photo">
+                <form enctype="multipart/form-data" method="post" action="?c=activity&amp;a=addactivity">
+                    <input type="file" name="content"/>
+                    <textarea name="about"></textarea>
+                    <input type="hidden" name="verb" value="Post" />
+                    <input type="hidden" name="type" value="Photo" />
+                    <input type="hidden" name="actor" value="<?= $this->profileshowPersonUri ?>" />
+                    <input type="hidden" name="reply" value=false />
+                    <button class="btn btn-primary" type="submit">Share</button>
+                </form>
+            </div>
+        </div>
     <a href="?c=feed&amp;a=getFeed&amp;uri=<?= urlencode($this->profileshowPersonUri) ?>">Show Activity Feed</a>
-    <form method="post" action="?c=user&a=subscribe">
+    <form method="post" action="?c=user&amp;a=subscribe">
         <div class="input-append">
             <input type="hidden" name="user" value="<?= $this->profileshowPersonUri ?>" />
             <input type="text" name="feeduri" /><button class="btn btn-primary" type="submit">Subscribe</button>
