--- a/templates/menu.phtml
+++ b/templates/menu.phtml
@@ -1,6 +1,6 @@
 <ul class="nav nav-list">
 <li class="nav-header">Menu</li>
-<li><a href="?c=application&a=newuser">Sign Up (Add User)</a></li>
-<li><a href="?c=application&a=login">Login</a></li>
-<li><a href="?c=profile&a=list">List All Profiles</a></li>
+<li><a href="?c=application&amp;a=newuser">Sign Up (Add User)</a></li>
+<li><a href="?c=application&amp;a=login">Login</a></li>
+<li><a href="?c=profile&amp;a=list">List All Profiles</a></li>
 </ul>
