--- a/templates/layout.phtml
+++ b/templates/layout.phtml
@@ -16,7 +16,7 @@
     <script type="text/javascript" src="resources/bootstrap/js/bootstrap.js"></script>
 </head>
 <body>
-    <div class="navbar navbar-fixed-top">
+    <div class="navbar navbar-fixed-top navbar-inverse">
         <div class="navbar-inner">
             <div class="container-fluid">
                 <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
