--- a/templates/layout.phtml
+++ b/templates/layout.phtml
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link type="text/css" href="resources/bootstrap/css/bootstrap.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link type="text/css" href="resources/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link type="text/css" href="resources/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" />
     <style type="text/css">
       body {
         padding-top: 60px;
