--- a/templates/layout.phtml
+++ b/templates/layout.phtml
@@ -6,9 +6,10 @@
     <link type="text/css" href="resources/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link type="text/css" href="resources/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" />
     <style type="text/css">
-      body {
-        padding-top: 60px;
-        padding-bottom: 40px;
+      @media (min-width: 980px) {
+        body {
+          padding-top: 60px;
+        }
       }
       .sidebar-nav {
         padding: 9px 0;
