Patch #1 for e7a3e82db9051f75e0013cdf9a48fdd7c85e7b77
Patch #1 for 'Squashed commit of splattater/develop'

Pingback still doesn't work

--- a/templates/resourceshow.phtml
+++ b/templates/resourceshow.phtml
@@ -30,11 +30,11 @@ foreach ($this->properties as $property) {
     <p>
         <a href="<?= htmlentities($activity['authorUri']) ?>"><?= htmlentities($activity['authorUri']) ?></a>
         <a href="<?= htmlentities($activity['verb']) ?>">
-          <?= htmlentities(Tools::getSpokenWord($activity['verb'])) ?></a>
+          <?= htmlentities(Saft_Tools::getSpokenWord($activity['verb'])) ?></a>
 
         <?php if (isset($activity['objectType'])) : ?>
             a <a href="<?= htmlentities($activity['object']) ?>">
-              <?= Tools::getSpokenWord($activity['type']) ?></a> at <?= $activity['pubDate'] ?>
+              <?= Saft_Tools::getSpokenWord($activity['type']) ?></a> at <?= $activity['pubDate'] ?>
             <em><a href="?c=feed&amp;a=getFeed&amp;uri=<?= urlencode($activity['object']) ?>">
               Show Feed of Object</a></em>
         <?php else : ?>
