--- a/templates/feed.phtml
+++ b/templates/feed.phtml
@@ -1,15 +1,13 @@
 <?php echo '<?xml version="1.0" encoding="utf-8"?>' ?>
 
 <feed xmlns="http://www.w3.org/2005/Atom" xmlns:activity="http://activitystrea.ms/schema/1.0/">
-    <title>Activity Feed for <?= htmlentities($this->name) ?></title>
+    <title>Activity Feed of <?= htmlentities($this->name) ?></title>
     <id><?= htmlentities($this->uri) ?></id>
     <link rel="hub" href="<?= htmlentities($this->hub) ?>"/>
     <link rel="self" type="application/atom+xml" href="<?= htmlentities($this->feedUri) ?>"/>
     <updated><?= $this->updated ?></updated>
-
     <?php foreach ($this->activities as $activity) : ?>
-
-    <entry>
+    <entry xmlns="http://www.w3.org/2005/Atom" xmlns:activity="http://activitystrea.ms/schema/1.0/">
       <title><?= htmlentities($activity['title']) ?></title>
       <id><?= htmlentities($activity['uri']) ?></id>
       <link href="<?= htmlentities($activity['uri']) ?>" />
@@ -23,32 +21,24 @@
       <activity:object>
         <id><?= htmlentities($activity['object']) ?></id>
         <?php if (isset($activity['objectContent'])) : ?>
-
         <content><?= $activity['objectContent'] ?></content>
         <?php endif; ?>
         <?php if (isset($activity['objectPubDate'])) : ?>
-
         <published><?= $activity['objectPubDate'] ?></published>
         <?php endif; ?>
         <?php if (isset($activity['objectType'])) : ?>
-
         <activity:object-type><?= $activity['objectType'] ?></activity:object-type>
         <?php endif; ?>
       </activity:object>
-
       <?php if (isset($activity['context'])) : ?>
       <activity:target>
         <id><?= htmlentities($activity['context']) ?></id>
-
         <?php if (isset($activity['contextType'])) : ?>
-
         <activity:object-type><?= $activity['contextType'] ?></activity:object-type>
         <?php endif; ?>
-
       </activity:target>
       <?php endif; ?>
+      <content>New Activity: <?= htmlentities($activity['title']) ?>: <?= $activity['objectContent'] ?></content>
     </entry>
-
     <?php endforeach; ?>
-
 </feed>
